--- a/src/index.css
+++ b/src/index.css
@@ -7,7 +7,8 @@ body{
 .container{
   width: 40%;
   margin-left: 30%;
-  min-height: 7rem;
+  max-height: 78vh;
+  overflow-y: scroll;
   height: auto;
   background-color: white;
   border-radius: 20px;
