--- a/src/index.css
+++ b/src/index.css
@@ -14,6 +14,10 @@ body{
   border-radius: 20px;
 
 }
+h1 img{
+  width: 50px;
+  border-radius: 50%;
+}
 @media (max-width: 767px ) {
   .container{
     width: 100%;
